--- a/src/app/airexport/airexporth/airexporth-edit/airexporth-edit.component.html
+++ b/src/app/airexport/airexporth/airexporth-edit/airexporth-edit.component.html
@@ -82,7 +82,7 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Consignee</label>
           <div class="col-sm-8">
-            <auto-complete formControlName="hbl_consigned_code" id="hbl_consigned_code" name="hbl_consigned_code"
+            <auto-complete formControlName="hbl_consignee_code" id="hbl_consignee_code" name="hbl_consignee_code"
               (CallBack)="callBack($event)" [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
               [filter]="{cust_is_parent : 'Y'}"
               display_column="[{'caption':'CODE','value':'cust_code'},{'caption':'NAME','value':'cust_name'}]"></auto-complete>
@@ -91,37 +91,37 @@
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm">Name</label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="hbl_consigned_to1" [case]="'UPPER'"></app-input>
+            <app-input maxlength="100" formControlName="hbl_consignee_name" [case]="'UPPER'"></app-input>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm"></label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="hbl_consigned_to2" [case]="'UPPER'"></app-input>
+            <app-input maxlength="100" formControlName="hbl_consignee_add1" [case]="'UPPER'"></app-input>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm"></label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="hbl_consigned_to3" [case]="'UPPER'"></app-input>
+            <app-input maxlength="100" formControlName="hbl_consignee_add2" [case]="'UPPER'"></app-input>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm"></label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="hbl_consigned_to4" [case]="'UPPER'"></app-input>
+            <app-input maxlength="100" formControlName="hbl_consignee_add3" [case]="'UPPER'"></app-input>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm"></label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="hbl_consigned_to5" [case]="'UPPER'"></app-input>
+            <app-input maxlength="100" formControlName="hbl_consignee_add4" [case]="'UPPER'"></app-input>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm"></label>
           <div class="col-sm-8">
-            <app-input maxlength="100" formControlName="hbl_consigned_to6" [case]="'UPPER'"></app-input>
+            <app-input maxlength="100" formControlName="hbl_consignee_add5" [case]="'UPPER'"></app-input>
           </div>
         </div>
         <div class="form-group row">
@@ -749,13 +749,17 @@
               [placeholder]="gs.globalConstants.global_date_format" ></app-date>
           </div>
         </div>
-        <!-- <div class="form-group row">
+        <div class="form-group row">
           <label class="col-sm-4 form-label form-lable-sm" for="">Print Type</label>
-          <div class="col-sm-8">
+          <div class="col-sm-4">
             <app-combobox [dataSource]="dataList2" [valueColumn]="'key'" [displayColumn]="'value'"
-             formControlName="hbl_bltype"></app-combobox>
+             ></app-combobox>
           </div>
-        </div> -->
+          <div class="col-sm-4">
+            <button *ngIf="bAdd || bEdit" class="btn btn-success btn-sm me-2">MAWB</button>
+            <button *ngIf="bAdd || bEdit" class="btn btn-success btn-sm">BLANK MAWB</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
